@@ -4,6 +4,7 @@
  404309 build errors in 0.122 (Geoff)
  404183 pan sends (null) if server requires authentication (Laurent Bigonville)
  395318 give user feedback when filtering a large newsgroup (Kreao Kunjas)
+ 404347 indicate offline status more clearly (Samuli Karkkainen)
 
 0.122 "Not Even Wrong"
  354779 pan no longer attempts to reconnect (Jason Auvenshine)
